--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     <i class="cmdIcon fa fa-ellipsis-vertical"></i>
                 </div>
                 <div class="dropdown-menu noselect">
-                    <div class="dropdown-item" id="loginCmd">
-                        <i class="menuIcon fa fa-sign-in mx-2"></i> Connexion
+                    <div class="dropdown-item" id="All">
+                        <i id="iconAll" class="fa fa-check"></i> Toutes les catégories
                     </div>
                     <div class="dropdown-divider"></div>
-
+                    <div id="category">
+                    </div>
+                    <div class="dropdown-divider"></div>
                     <div class="dropdown-item" id="aboutCmd">
                         <i class="menuIcon fa fa-info-circle mx-2"></i> À propos...
                     </div>
